# Coding_Crash

./: README.md  pyproject.toml
coding_crash/01_OpenAI_API/: code.ipynb
coding_crash/02_LangChain_Inputs_&_Outputs/: code.ipynb
coding_crash/03_Prompt_Templates/: code.ipynb
coding_crash/04_Chains/: advanced_chains.ipynb  basics_and_outputerparsers.ipynb
coding_crash/05_Callbacks/: callbacks.ipynb
coding_crash/06_Memory/: chatbot.py  code.ipynb
